--- a/web/fwiki/fwiki.css
+++ b/web/fwiki/fwiki.css
@@ -201,7 +201,7 @@ h2#ctitle a{
 #chapter #content{
     /*border:     1px     solid;*/
 }
-#listpost div{
+#listpost a{
     width:      85%;
     /*border:     1px solid;
     border:     0px     solid;
